<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name:</string>
    <string name="full_name">Full Name</string>
    <string name="size_of_group">Size of Group</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="smoking">Smoking</string>
    <string name="seating_option">Seating Option:</string>
    <string name="review">Review</string>
</resources>